Use int64_t package for big ints

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest-cli": "^23.5.0"
   },
   "dependencies": {
-    "base-x": "^3.0.4"
+    "base-x": "^3.0.4",
+    "int64_t": "^0.5.1"
   }
 }
