--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "description": "My Bitcoin Cash library",
   "scripts": {
+    "clean": "rimraf lib",
     "flow": "flow",
     "pretest": "npm run build",
     "test": "jest",
+    "flowbuild": "flow-copy-source src lib",
+    "prebuild": "npm run clean && npm run flowbuild",
     "build": "babel src/ -d lib/",
     "prepublish": "npm run build"
   },
@@ -24,12 +27,13 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.80.0",
+    "flow-copy-source": "^2.0.2",
     "flow-remove-types": "^1.2.3",
     "jest": "^23.5.0",
-    "jest-cli": "^23.5.0"
+    "jest-cli": "^23.5.0",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
-    "base-x": "^3.0.4",
-    "int64_t": "^0.5.1"
+    "base-x": "^3.0.4"
   }
 }
