--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-bitcoin-cash-lib",
   "version": "0.0.1",
   "description": "My Bitcoin Cash library",
+  "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
     "flow": "flow",
