--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
       "env",
       {
         "targets": {
-          "browsers": "last 2 versions",
+          "browser": "last 2 versions",
           "node": "current"
         }
       }
