--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "url": "https://github.com/proehlen/cashlib.git"
   },
   "main": "lib/index.js",
-  "browser": "lib/index.js",
   "keywords": [
     "bitcoin",
     "cash",
     "bch",
     "library",
-    "nodejs",
-    "browser"
+    "nodejs"
   ],
   "scripts": {
     "clean": "rimraf lib",
