Remove tests and source from published npm package
Full code is available on GitHub - no need to distribute

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "url": "https://github.com/proehlen/cashlib.git"
   },
   "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "keywords": [
     "bitcoin",
     "cash",
